fixed unwanted scrollbar

--- a/src/app/client/context/network/network.component.css
+++ b/src/app/client/context/network/network.component.css
@@ -3,7 +3,6 @@
   text-align: justify;
   padding: 10px;
   padding-top: 5px;
-  overflow-y: auto;
 }
 
 .icon {
